# chatapp

./: Cargo.toml  README.md  flake.nix  result  run_db.sh
backend/: Cargo.toml  README.md
backend/src/: auth.rs  db.rs  main.rs  realtime.rs
backend/src/routes/: friends.rs  messages.rs  mod.rs  rooms.rs  users.rs  ws.rs
db/: Dockerfile  init.sql  mock_data.sql
src/: auth.rs  db.rs  main.rs
src/routes/: messages.rs  rooms.rs  users.rs
