[package]
name = "chatapp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["multipart", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
validator = "0.20.0"
